crates/repl/src/snapshots/flightrepl__tests__multiple_batches_exactly_500_rows.snap
---
source: crates/flightrepl/src/lib.rs
expression: result
---
+------+-----------+
| id   | name      |
+------+-----------+
| 1000 | name_1000 |
| 1001 | name_1001 |
| 1002 | name_1002 |
| 1003 | name_1003 |
| 1004 | name_1004 |
| 1005 | name_1005 |
| 1006 | name_1006 |
| 1007 | name_1007 |
| 1008 | name_1008 |
| 1009 | name_1009 |
| 1010 | name_1010 |
| 1011 | name_1011 |
| 1012 | name_1012 |
| 1013 | name_1013 |
| 1014 | name_1014 |
| 1015 | name_1015 |
| 1016 | name_1016 |
| 1017 | name_1017 |
| 1018 | name_1018 |
| 1019 | name_1019 |
| 1020 | name_1020 |
| 1021 | name_1021 |
| 1022 | name_1022 |
| 1023 | name_1023 |
| 1024 | name_1024 |
| 1025 | name_1025 |
| 1026 | name_1026 |
| 1027 | name_1027 |
| 1028 | name_1028 |
| 1029 | name_1029 |
| 1030 | name_1030 |
| 1031 | name_1031 |
| 1032 | name_1032 |
| 1033 | name_1033 |
| 1034 | name_1034 |
| 1035 | name_1035 |
| 1036 | name_1036 |
| 1037 | name_1037 |
| 1038 | name_1038 |
| 1039 | name_1039 |
| 1040 | name_1040 |
| 1041 | name_1041 |
| 1042 | name_1042 |
| 1043 | name_1043 |
| 1044 | name_1044 |
| 1045 | name_1045 |
| 1046 | name_1046 |
| 1047 | name_1047 |
| 1048 | name_1048 |
| 1049 | name_1049 |
| 1050 | name_1050 |
| 1051 | name_1051 |
| 1052 | name_1052 |
| 1053 | name_1053 |
| 1054 | name_1054 |
| 1055 | name_1055 |
| 1056 | name_1056 |
| 1057 | name_1057 |
| 1058 | name_1058 |
| 1059 | name_1059 |
| 1060 | name_1060 |
| 1061 | name_1061 |
| 1062 | name_1062 |
| 1063 | name_1063 |
| 1064 | name_1064 |
| 1065 | name_1065 |
| 1066 | name_1066 |
| 1067 | name_1067 |
| 1068 | name_1068 |
| 1069 | name_1069 |
| 1070 | name_1070 |
| 1071 | name_1071 |
| 1072 | name_1072 |
| 1073 | name_1073 |
| 1074 | name_1074 |
| 1075 | name_1075 |
| 1076 | name_1076 |
| 1077 | name_1077 |
| 1078 | name_1078 |
| 1079 | name_1079 |
| 1080 | name_1080 |
| 1081 | name_1081 |
| 1082 | name_1082 |
| 1083 | name_1083 |
| 1084 | name_1084 |
| 1085 | name_1085 |
| 1086 | name_1086 |
| 1087 | name_1087 |
| 1088 | name_1088 |
| 1089 | name_1089 |
| 1090 | name_1090 |
| 1091 | name_1091 |
| 1092 | name_1092 |
| 1093 | name_1093 |
| 1094 | name_1094 |
| 1095 | name_1095 |
| 1096 | name_1096 |
| 1097 | name_1097 |
| 1098 | name_1098 |
| 1099 | name_1099 |
| 1100 | name_1100 |
| 1101 | name_1101 |
| 1102 | name_1102 |
| 1103 | name_1103 |
| 1104 | name_1104 |
| 1105 | name_1105 |
| 1106 | name_1106 |
| 1107 | name_1107 |
| 1108 | name_1108 |
| 1109 | name_1109 |
| 1110 | name_1110 |
| 1111 | name_1111 |
| 1112 | name_1112 |
| 1113 | name_1113 |
| 1114 | name_1114 |
| 1115 | name_1115 |
| 1116 | name_1116 |
| 1117 | name_1117 |
| 1118 | name_1118 |
| 1119 | name_1119 |
| 1120 | name_1120 |
| 1121 | name_1121 |
| 1122 | name_1122 |
| 1123 | name_1123 |
| 1124 | name_1124 |
| 1125 | name_1125 |
| 1126 | name_1126 |
| 1127 | name_1127 |
| 1128 | name_1128 |
| 1129 | name_1129 |
| 1130 | name_1130 |
| 1131 | name_1131 |
| 1132 | name_1132 |
| 1133 | name_1133 |
| 1134 | name_1134 |
| 1135 | name_1135 |
| 1136 | name_1136 |
| 1137 | name_1137 |
| 1138 | name_1138 |
| 1139 | name_1139 |
| 1140 | name_1140 |
| 1141 | name_1141 |
| 1142 | name_1142 |
| 1143 | name_1143 |
| 1144 | name_1144 |
| 1145 | name_1145 |
| 1146 | name_1146 |
| 1147 | name_1147 |
| 1148 | name_1148 |
| 1149 | name_1149 |
| 1150 | name_1150 |
| 1151 | name_1151 |
| 1152 | name_1152 |
| 1153 | name_1153 |
| 1154 | name_1154 |
| 1155 | name_1155 |
| 1156 | name_1156 |
| 1157 | name_1157 |
| 1158 | name_1158 |
| 1159 | name_1159 |
| 1160 | name_1160 |
| 1161 | name_1161 |
| 1162 | name_1162 |
| 1163 | name_1163 |
| 1164 | name_1164 |
| 1165 | name_1165 |
| 1166 | name_1166 |
| 1167 | name_1167 |
| 1168 | name_1168 |
| 1169 | name_1169 |
| 1170 | name_1170 |
| 1171 | name_1171 |
| 1172 | name_1172 |
| 1173 | name_1173 |
| 1174 | name_1174 |
| 1175 | name_1175 |
| 1176 | name_1176 |
| 1177 | name_1177 |
| 1178 | name_1178 |
| 1179 | name_1179 |
| 1180 | name_1180 |
| 1181 | name_1181 |
| 1182 | name_1182 |
| 1183 | name_1183 |
| 1184 | name_1184 |
| 1185 | name_1185 |
| 1186 | name_1186 |
| 1187 | name_1187 |
| 1188 | name_1188 |
| 1189 | name_1189 |
| 1190 | name_1190 |
| 1191 | name_1191 |
| 1192 | name_1192 |
| 1193 | name_1193 |
| 1194 | name_1194 |
| 1195 | name_1195 |
| 1196 | name_1196 |
| 1197 | name_1197 |
| 1198 | name_1198 |
| 1199 | name_1199 |
| 1200 | name_1200 |
| 1201 | name_1201 |
| 1202 | name_1202 |
| 1203 | name_1203 |
| 1204 | name_1204 |
| 1205 | name_1205 |
| 1206 | name_1206 |
| 1207 | name_1207 |
| 1208 | name_1208 |
| 1209 | name_1209 |
| 1210 | name_1210 |
| 1211 | name_1211 |
| 1212 | name_1212 |
| 1213 | name_1213 |
| 1214 | name_1214 |
| 1215 | name_1215 |
| 1216 | name_1216 |
| 1217 | name_1217 |
| 1218 | name_1218 |
| 1219 | name_1219 |
| 1220 | name_1220 |
| 1221 | name_1221 |
| 1222 | name_1222 |
| 1223 | name_1223 |
| 1224 | name_1224 |
| 1225 | name_1225 |
| 1226 | name_1226 |
| 1227 | name_1227 |
| 1228 | name_1228 |
| 1229 | name_1229 |
| 1230 | name_1230 |
| 1231 | name_1231 |
| 1232 | name_1232 |
| 1233 | name_1233 |
| 1234 | name_1234 |
| 1235 | name_1235 |
| 1236 | name_1236 |
| 1237 | name_1237 |
| 1238 | name_1238 |
| 1239 | name_1239 |
| 1240 | name_1240 |
| 1241 | name_1241 |
| 1242 | name_1242 |
| 1243 | name_1243 |
| 1244 | name_1244 |
| 1245 | name_1245 |
| 1246 | name_1246 |
| 1247 | name_1247 |
| 1248 | name_1248 |
| 1249 | name_1249 |
| 2000 | name_2000 |
| 2001 | name_2001 |
| 2002 | name_2002 |
| 2003 | name_2003 |
| 2004 | name_2004 |
| 2005 | name_2005 |
| 2006 | name_2006 |
| 2007 | name_2007 |
| 2008 | name_2008 |
| 2009 | name_2009 |
| 2010 | name_2010 |
| 2011 | name_2011 |
| 2012 | name_2012 |
| 2013 | name_2013 |
| 2014 | name_2014 |
| 2015 | name_2015 |
| 2016 | name_2016 |
| 2017 | name_2017 |
| 2018 | name_2018 |
| 2019 | name_2019 |
| 2020 | name_2020 |
| 2021 | name_2021 |
| 2022 | name_2022 |
| 2023 | name_2023 |
| 2024 | name_2024 |
| 2025 | name_2025 |
| 2026 | name_2026 |
| 2027 | name_2027 |
| 2028 | name_2028 |
| 2029 | name_2029 |
| 2030 | name_2030 |
| 2031 | name_2031 |
| 2032 | name_2032 |
| 2033 | name_2033 |
| 2034 | name_2034 |
| 2035 | name_2035 |
| 2036 | name_2036 |
| 2037 | name_2037 |
| 2038 | name_2038 |
| 2039 | name_2039 |
| 2040 | name_2040 |
| 2041 | name_2041 |
| 2042 | name_2042 |
| 2043 | name_2043 |
| 2044 | name_2044 |
| 2045 | name_2045 |
| 2046 | name_2046 |
| 2047 | name_2047 |
| 2048 | name_2048 |
| 2049 | name_2049 |
| 2050 | name_2050 |
| 2051 | name_2051 |
| 2052 | name_2052 |
| 2053 | name_2053 |
| 2054 | name_2054 |
| 2055 | name_2055 |
| 2056 | name_2056 |
| 2057 | name_2057 |
| 2058 | name_2058 |
| 2059 | name_2059 |
| 2060 | name_2060 |
| 2061 | name_2061 |
| 2062 | name_2062 |
| 2063 | name_2063 |
| 2064 | name_2064 |
| 2065 | name_2065 |
| 2066 | name_2066 |
| 2067 | name_2067 |
| 2068 | name_2068 |
| 2069 | name_2069 |
| 2070 | name_2070 |
| 2071 | name_2071 |
| 2072 | name_2072 |
| 2073 | name_2073 |
| 2074 | name_2074 |
| 2075 | name_2075 |
| 2076 | name_2076 |
| 2077 | name_2077 |
| 2078 | name_2078 |
| 2079 | name_2079 |
| 2080 | name_2080 |
| 2081 | name_2081 |
| 2082 | name_2082 |
| 2083 | name_2083 |
| 2084 | name_2084 |
| 2085 | name_2085 |
| 2086 | name_2086 |
| 2087 | name_2087 |
| 2088 | name_2088 |
| 2089 | name_2089 |
| 2090 | name_2090 |
| 2091 | name_2091 |
| 2092 | name_2092 |
| 2093 | name_2093 |
| 2094 | name_2094 |
| 2095 | name_2095 |
| 2096 | name_2096 |
| 2097 | name_2097 |
| 2098 | name_2098 |
| 2099 | name_2099 |
| 2100 | name_2100 |
| 2101 | name_2101 |
| 2102 | name_2102 |
| 2103 | name_2103 |
| 2104 | name_2104 |
| 2105 | name_2105 |
| 2106 | name_2106 |
| 2107 | name_2107 |
| 2108 | name_2108 |
| 2109 | name_2109 |
| 2110 | name_2110 |
| 2111 | name_2111 |
| 2112 | name_2112 |
| 2113 | name_2113 |
| 2114 | name_2114 |
| 2115 | name_2115 |
| 2116 | name_2116 |
| 2117 | name_2117 |
| 2118 | name_2118 |
| 2119 | name_2119 |
| 2120 | name_2120 |
| 2121 | name_2121 |
| 2122 | name_2122 |
| 2123 | name_2123 |
| 2124 | name_2124 |
| 2125 | name_2125 |
| 2126 | name_2126 |
| 2127 | name_2127 |
| 2128 | name_2128 |
| 2129 | name_2129 |
| 2130 | name_2130 |
| 2131 | name_2131 |
| 2132 | name_2132 |
| 2133 | name_2133 |
| 2134 | name_2134 |
| 2135 | name_2135 |
| 2136 | name_2136 |
| 2137 | name_2137 |
| 2138 | name_2138 |
| 2139 | name_2139 |
| 2140 | name_2140 |
| 2141 | name_2141 |
| 2142 | name_2142 |
| 2143 | name_2143 |
| 2144 | name_2144 |
| 2145 | name_2145 |
| 2146 | name_2146 |
| 2147 | name_2147 |
| 2148 | name_2148 |
| 2149 | name_2149 |
| 2150 | name_2150 |
| 2151 | name_2151 |
| 2152 | name_2152 |
| 2153 | name_2153 |
| 2154 | name_2154 |
| 2155 | name_2155 |
| 2156 | name_2156 |
| 2157 | name_2157 |
| 2158 | name_2158 |
| 2159 | name_2159 |
| 2160 | name_2160 |
| 2161 | name_2161 |
| 2162 | name_2162 |
| 2163 | name_2163 |
| 2164 | name_2164 |
| 2165 | name_2165 |
| 2166 | name_2166 |
| 2167 | name_2167 |
| 2168 | name_2168 |
| 2169 | name_2169 |
| 2170 | name_2170 |
| 2171 | name_2171 |
| 2172 | name_2172 |
| 2173 | name_2173 |
| 2174 | name_2174 |
| 2175 | name_2175 |
| 2176 | name_2176 |
| 2177 | name_2177 |
| 2178 | name_2178 |
| 2179 | name_2179 |
| 2180 | name_2180 |
| 2181 | name_2181 |
| 2182 | name_2182 |
| 2183 | name_2183 |
| 2184 | name_2184 |
| 2185 | name_2185 |
| 2186 | name_2186 |
| 2187 | name_2187 |
| 2188 | name_2188 |
| 2189 | name_2189 |
| 2190 | name_2190 |
| 2191 | name_2191 |
| 2192 | name_2192 |
| 2193 | name_2193 |
| 2194 | name_2194 |
| 2195 | name_2195 |
| 2196 | name_2196 |
| 2197 | name_2197 |
| 2198 | name_2198 |
| 2199 | name_2199 |
| 2200 | name_2200 |
| 2201 | name_2201 |
| 2202 | name_2202 |
| 2203 | name_2203 |
| 2204 | name_2204 |
| 2205 | name_2205 |
| 2206 | name_2206 |
| 2207 | name_2207 |
| 2208 | name_2208 |
| 2209 | name_2209 |
| 2210 | name_2210 |
| 2211 | name_2211 |
| 2212 | name_2212 |
| 2213 | name_2213 |
| 2214 | name_2214 |
| 2215 | name_2215 |
| 2216 | name_2216 |
| 2217 | name_2217 |
| 2218 | name_2218 |
| 2219 | name_2219 |
| 2220 | name_2220 |
| 2221 | name_2221 |
| 2222 | name_2222 |
| 2223 | name_2223 |
| 2224 | name_2224 |
| 2225 | name_2225 |
| 2226 | name_2226 |
| 2227 | name_2227 |
| 2228 | name_2228 |
| 2229 | name_2229 |
| 2230 | name_2230 |
| 2231 | name_2231 |
| 2232 | name_2232 |
| 2233 | name_2233 |
| 2234 | name_2234 |
| 2235 | name_2235 |
| 2236 | name_2236 |
| 2237 | name_2237 |
| 2238 | name_2238 |
| 2239 | name_2239 |
| 2240 | name_2240 |
| 2241 | name_2241 |
| 2242 | name_2242 |
| 2243 | name_2243 |
| 2244 | name_2244 |
| 2245 | name_2245 |
| 2246 | name_2246 |
| 2247 | name_2247 |
| 2248 | name_2248 |
| 2249 | name_2249 |
+------+-----------+
