crates/repl/src/snapshots/flightrepl__tests__multiple_batches_over_500_rows.snap
---
source: crates/flightrepl/src/lib.rs
expression: result
---
+------+-----------+
| id   | name      |
+------+-----------+
| 1000 | name_1000 |
| 1001 | name_1001 |
| 1002 | name_1002 |
| 1003 | name_1003 |
| 1004 | name_1004 |
| 1005 | name_1005 |
| 1006 | name_1006 |
| 1007 | name_1007 |
| 1008 | name_1008 |
| 1009 | name_1009 |
| 1010 | name_1010 |
| 1011 | name_1011 |
| 1012 | name_1012 |
| 1013 | name_1013 |
| 1014 | name_1014 |
| 1015 | name_1015 |
| 1016 | name_1016 |
| 1017 | name_1017 |
| 1018 | name_1018 |
| 1019 | name_1019 |
| 1020 | name_1020 |
| 1021 | name_1021 |
| 1022 | name_1022 |
| 1023 | name_1023 |
| 1024 | name_1024 |
| 1025 | name_1025 |
| 1026 | name_1026 |
| 1027 | name_1027 |
| 1028 | name_1028 |
| 1029 | name_1029 |
| 1030 | name_1030 |
| 1031 | name_1031 |
| 1032 | name_1032 |
| 1033 | name_1033 |
| 1034 | name_1034 |
| 1035 | name_1035 |
| 1036 | name_1036 |
| 1037 | name_1037 |
| 1038 | name_1038 |
| 1039 | name_1039 |
| 1040 | name_1040 |
| 1041 | name_1041 |
| 1042 | name_1042 |
| 1043 | name_1043 |
| 1044 | name_1044 |
| 1045 | name_1045 |
| 1046 | name_1046 |
| 1047 | name_1047 |
| 1048 | name_1048 |
| 1049 | name_1049 |
| 1050 | name_1050 |
| 1051 | name_1051 |
| 1052 | name_1052 |
| 1053 | name_1053 |
| 1054 | name_1054 |
| 1055 | name_1055 |
| 1056 | name_1056 |
| 1057 | name_1057 |
| 1058 | name_1058 |
| 1059 | name_1059 |
| 1060 | name_1060 |
| 1061 | name_1061 |
| 1062 | name_1062 |
| 1063 | name_1063 |
| 1064 | name_1064 |
| 1065 | name_1065 |
| 1066 | name_1066 |
| 1067 | name_1067 |
| 1068 | name_1068 |
| 1069 | name_1069 |
| 1070 | name_1070 |
| 1071 | name_1071 |
| 1072 | name_1072 |
| 1073 | name_1073 |
| 1074 | name_1074 |
| 1075 | name_1075 |
| 1076 | name_1076 |
| 1077 | name_1077 |
| 1078 | name_1078 |
| 1079 | name_1079 |
| 1080 | name_1080 |
| 1081 | name_1081 |
| 1082 | name_1082 |
| 1083 | name_1083 |
| 1084 | name_1084 |
| 1085 | name_1085 |
| 1086 | name_1086 |
| 1087 | name_1087 |
| 1088 | name_1088 |
| 1089 | name_1089 |
| 1090 | name_1090 |
| 1091 | name_1091 |
| 1092 | name_1092 |
| 1093 | name_1093 |
| 1094 | name_1094 |
| 1095 | name_1095 |
| 1096 | name_1096 |
| 1097 | name_1097 |
| 1098 | name_1098 |
| 1099 | name_1099 |
| 1100 | name_1100 |
| 1101 | name_1101 |
| 1102 | name_1102 |
| 1103 | name_1103 |
| 1104 | name_1104 |
| 1105 | name_1105 |
| 1106 | name_1106 |
| 1107 | name_1107 |
| 1108 | name_1108 |
| 1109 | name_1109 |
| 1110 | name_1110 |
| 1111 | name_1111 |
| 1112 | name_1112 |
| 1113 | name_1113 |
| 1114 | name_1114 |
| 1115 | name_1115 |
| 1116 | name_1116 |
| 1117 | name_1117 |
| 1118 | name_1118 |
| 1119 | name_1119 |
| 1120 | name_1120 |
| 1121 | name_1121 |
| 1122 | name_1122 |
| 1123 | name_1123 |
| 1124 | name_1124 |
| 1125 | name_1125 |
| 1126 | name_1126 |
| 1127 | name_1127 |
| 1128 | name_1128 |
| 1129 | name_1129 |
| 1130 | name_1130 |
| 1131 | name_1131 |
| 1132 | name_1132 |
| 1133 | name_1133 |
| 1134 | name_1134 |
| 1135 | name_1135 |
| 1136 | name_1136 |
| 1137 | name_1137 |
| 1138 | name_1138 |
| 1139 | name_1139 |
| 1140 | name_1140 |
| 1141 | name_1141 |
| 1142 | name_1142 |
| 1143 | name_1143 |
| 1144 | name_1144 |
| 1145 | name_1145 |
| 1146 | name_1146 |
| 1147 | name_1147 |
| 1148 | name_1148 |
| 1149 | name_1149 |
| 1150 | name_1150 |
| 1151 | name_1151 |
| 1152 | name_1152 |
| 1153 | name_1153 |
| 1154 | name_1154 |
| 1155 | name_1155 |
| 1156 | name_1156 |
| 1157 | name_1157 |
| 1158 | name_1158 |
| 1159 | name_1159 |
| 1160 | name_1160 |
| 1161 | name_1161 |
| 1162 | name_1162 |
| 1163 | name_1163 |
| 1164 | name_1164 |
| 1165 | name_1165 |
| 1166 | name_1166 |
| 1167 | name_1167 |
| 1168 | name_1168 |
| 1169 | name_1169 |
| 1170 | name_1170 |
| 1171 | name_1171 |
| 1172 | name_1172 |
| 1173 | name_1173 |
| 1174 | name_1174 |
| 1175 | name_1175 |
| 1176 | name_1176 |
| 1177 | name_1177 |
| 1178 | name_1178 |
| 1179 | name_1179 |
| 1180 | name_1180 |
| 1181 | name_1181 |
| 1182 | name_1182 |
| 1183 | name_1183 |
| 1184 | name_1184 |
| 1185 | name_1185 |
| 1186 | name_1186 |
| 1187 | name_1187 |
| 1188 | name_1188 |
| 1189 | name_1189 |
| 1190 | name_1190 |
| 1191 | name_1191 |
| 1192 | name_1192 |
| 1193 | name_1193 |
| 1194 | name_1194 |
| 1195 | name_1195 |
| 1196 | name_1196 |
| 1197 | name_1197 |
| 1198 | name_1198 |
| 1199 | name_1199 |
| 2000 | name_2000 |
| 2001 | name_2001 |
| 2002 | name_2002 |
| 2003 | name_2003 |
| 2004 | name_2004 |
| 2005 | name_2005 |
| 2006 | name_2006 |
| 2007 | name_2007 |
| 2008 | name_2008 |
| 2009 | name_2009 |
| 2010 | name_2010 |
| 2011 | name_2011 |
| 2012 | name_2012 |
| 2013 | name_2013 |
| 2014 | name_2014 |
| 2015 | name_2015 |
| 2016 | name_2016 |
| 2017 | name_2017 |
| 2018 | name_2018 |
| 2019 | name_2019 |
| 2020 | name_2020 |
| 2021 | name_2021 |
| 2022 | name_2022 |
| 2023 | name_2023 |
| 2024 | name_2024 |
| 2025 | name_2025 |
| 2026 | name_2026 |
| 2027 | name_2027 |
| 2028 | name_2028 |
| 2029 | name_2029 |
| 2030 | name_2030 |
| 2031 | name_2031 |
| 2032 | name_2032 |
| 2033 | name_2033 |
| 2034 | name_2034 |
| 2035 | name_2035 |
| 2036 | name_2036 |
| 2037 | name_2037 |
| 2038 | name_2038 |
| 2039 | name_2039 |
| 2040 | name_2040 |
| 2041 | name_2041 |
| 2042 | name_2042 |
| 2043 | name_2043 |
| 2044 | name_2044 |
| 2045 | name_2045 |
| 2046 | name_2046 |
| 2047 | name_2047 |
| 2048 | name_2048 |
| 2049 | name_2049 |
| 2050 | name_2050 |
| 2051 | name_2051 |
| 2052 | name_2052 |
| 2053 | name_2053 |
| 2054 | name_2054 |
| 2055 | name_2055 |
| 2056 | name_2056 |
| 2057 | name_2057 |
| 2058 | name_2058 |
| 2059 | name_2059 |
| 2060 | name_2060 |
| 2061 | name_2061 |
| 2062 | name_2062 |
| 2063 | name_2063 |
| 2064 | name_2064 |
| 2065 | name_2065 |
| 2066 | name_2066 |
| 2067 | name_2067 |
| 2068 | name_2068 |
| 2069 | name_2069 |
| 2070 | name_2070 |
| 2071 | name_2071 |
| 2072 | name_2072 |
| 2073 | name_2073 |
| 2074 | name_2074 |
| 2075 | name_2075 |
| 2076 | name_2076 |
| 2077 | name_2077 |
| 2078 | name_2078 |
| 2079 | name_2079 |
| 2080 | name_2080 |
| 2081 | name_2081 |
| 2082 | name_2082 |
| 2083 | name_2083 |
| 2084 | name_2084 |
| 2085 | name_2085 |
| 2086 | name_2086 |
| 2087 | name_2087 |
| 2088 | name_2088 |
| 2089 | name_2089 |
| 2090 | name_2090 |
| 2091 | name_2091 |
| 2092 | name_2092 |
| 2093 | name_2093 |
| 2094 | name_2094 |
| 2095 | name_2095 |
| 2096 | name_2096 |
| 2097 | name_2097 |
| 2098 | name_2098 |
| 2099 | name_2099 |
| 2100 | name_2100 |
| 2101 | name_2101 |
| 2102 | name_2102 |
| 2103 | name_2103 |
| 2104 | name_2104 |
| 2105 | name_2105 |
| 2106 | name_2106 |
| 2107 | name_2107 |
| 2108 | name_2108 |
| 2109 | name_2109 |
| 2110 | name_2110 |
| 2111 | name_2111 |
| 2112 | name_2112 |
| 2113 | name_2113 |
| 2114 | name_2114 |
| 2115 | name_2115 |
| 2116 | name_2116 |
| 2117 | name_2117 |
| 2118 | name_2118 |
| 2119 | name_2119 |
| 2120 | name_2120 |
| 2121 | name_2121 |
| 2122 | name_2122 |
| 2123 | name_2123 |
| 2124 | name_2124 |
| 2125 | name_2125 |
| 2126 | name_2126 |
| 2127 | name_2127 |
| 2128 | name_2128 |
| 2129 | name_2129 |
| 2130 | name_2130 |
| 2131 | name_2131 |
| 2132 | name_2132 |
| 2133 | name_2133 |
| 2134 | name_2134 |
| 2135 | name_2135 |
| 2136 | name_2136 |
| 2137 | name_2137 |
| 2138 | name_2138 |
| 2139 | name_2139 |
| 2140 | name_2140 |
| 2141 | name_2141 |
| 2142 | name_2142 |
| 2143 | name_2143 |
| 2144 | name_2144 |
| 2145 | name_2145 |
| 2146 | name_2146 |
| 2147 | name_2147 |
| 2148 | name_2148 |
| 2149 | name_2149 |
| 2150 | name_2150 |
| 2151 | name_2151 |
| 2152 | name_2152 |
| 2153 | name_2153 |
| 2154 | name_2154 |
| 2155 | name_2155 |
| 2156 | name_2156 |
| 2157 | name_2157 |
| 2158 | name_2158 |
| 2159 | name_2159 |
| 2160 | name_2160 |
| 2161 | name_2161 |
| 2162 | name_2162 |
| 2163 | name_2163 |
| 2164 | name_2164 |
| 2165 | name_2165 |
| 2166 | name_2166 |
| 2167 | name_2167 |
| 2168 | name_2168 |
| 2169 | name_2169 |
| 2170 | name_2170 |
| 2171 | name_2171 |
| 2172 | name_2172 |
| 2173 | name_2173 |
| 2174 | name_2174 |
| 2175 | name_2175 |
| 2176 | name_2176 |
| 2177 | name_2177 |
| 2178 | name_2178 |
| 2179 | name_2179 |
| 2180 | name_2180 |
| 2181 | name_2181 |
| 2182 | name_2182 |
| 2183 | name_2183 |
| 2184 | name_2184 |
| 2185 | name_2185 |
| 2186 | name_2186 |
| 2187 | name_2187 |
| 2188 | name_2188 |
| 2189 | name_2189 |
| 2190 | name_2190 |
| 2191 | name_2191 |
| 2192 | name_2192 |
| 2193 | name_2193 |
| 2194 | name_2194 |
| 2195 | name_2195 |
| 2196 | name_2196 |
| 2197 | name_2197 |
| 2198 | name_2198 |
| 2199 | name_2199 |
| 3000 | name_3000 |
| 3001 | name_3001 |
| 3002 | name_3002 |
| 3003 | name_3003 |
| 3004 | name_3004 |
| 3005 | name_3005 |
| 3006 | name_3006 |
| 3007 | name_3007 |
| 3008 | name_3008 |
| 3009 | name_3009 |
| 3010 | name_3010 |
| 3011 | name_3011 |
| 3012 | name_3012 |
| 3013 | name_3013 |
| 3014 | name_3014 |
| 3015 | name_3015 |
| 3016 | name_3016 |
| 3017 | name_3017 |
| 3018 | name_3018 |
| 3019 | name_3019 |
| 3020 | name_3020 |
| 3021 | name_3021 |
| 3022 | name_3022 |
| 3023 | name_3023 |
| 3024 | name_3024 |
| 3025 | name_3025 |
| 3026 | name_3026 |
| 3027 | name_3027 |
| 3028 | name_3028 |
| 3029 | name_3029 |
| 3030 | name_3030 |
| 3031 | name_3031 |
| 3032 | name_3032 |
| 3033 | name_3033 |
| 3034 | name_3034 |
| 3035 | name_3035 |
| 3036 | name_3036 |
| 3037 | name_3037 |
| 3038 | name_3038 |
| 3039 | name_3039 |
| 3040 | name_3040 |
| 3041 | name_3041 |
| 3042 | name_3042 |
| 3043 | name_3043 |
| 3044 | name_3044 |
| 3045 | name_3045 |
| 3046 | name_3046 |
| 3047 | name_3047 |
| 3048 | name_3048 |
| 3049 | name_3049 |
| 3050 | name_3050 |
| 3051 | name_3051 |
| 3052 | name_3052 |
| 3053 | name_3053 |
| 3054 | name_3054 |
| 3055 | name_3055 |
| 3056 | name_3056 |
| 3057 | name_3057 |
| 3058 | name_3058 |
| 3059 | name_3059 |
| 3060 | name_3060 |
| 3061 | name_3061 |
| 3062 | name_3062 |
| 3063 | name_3063 |
| 3064 | name_3064 |
| 3065 | name_3065 |
| 3066 | name_3066 |
| 3067 | name_3067 |
| 3068 | name_3068 |
| 3069 | name_3069 |
| 3070 | name_3070 |
| 3071 | name_3071 |
| 3072 | name_3072 |
| 3073 | name_3073 |
| 3074 | name_3074 |
| 3075 | name_3075 |
| 3076 | name_3076 |
| 3077 | name_3077 |
| 3078 | name_3078 |
| 3079 | name_3079 |
| 3080 | name_3080 |
| 3081 | name_3081 |
| 3082 | name_3082 |
| 3083 | name_3083 |
| 3084 | name_3084 |
| 3085 | name_3085 |
| 3086 | name_3086 |
| 3087 | name_3087 |
| 3088 | name_3088 |
| 3089 | name_3089 |
| 3090 | name_3090 |
| 3091 | name_3091 |
| 3092 | name_3092 |
| 3093 | name_3093 |
| 3094 | name_3094 |
| 3095 | name_3095 |
| 3096 | name_3096 |
| 3097 | name_3097 |
| 3098 | name_3098 |
| 3099 | name_3099 |
+------+-----------+
